# docs/swagger.yaml
@@ -64,8 +64,8 @@ definitions:
         type: integer
       minutes:
         type: integer
-      title:
-        type: string
+      pages_read:
+        type: integer
     type: object
   models.FocusTimerResponse:
     properties:
@@ -121,6 +121,8 @@ definitions:
         type: integer
       genre:
         type: string
+      id:
+        type: integer
       read_count:
         type: integer
       title:
@@ -130,6 +132,8 @@ definitions:
     type: object
   models.UserBookSummary:
     properties:
+      id:
+        type: integer
       read_count:
         type: integer
       title:
